@@ -183,7 +183,7 @@ def test_attribute_completion(hlwm):
     assert complete('monitors.fooob') == []
     assert complete('monitors.fooo.bar') == []
     assert len(complete('monitors.focus.')) >= 8
-    assert complete('t') == ['tags.', 'theme.', 'tmp.']
+    assert complete('t') == ['tags.', 'theme.', 'tmp.', 'types.']
     assert complete('') == [child + '.' for child in hlwm.list_children_via_attr('')]
 
 
